--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
     "file-loader": "^1.1.11",
+    "flickrapi": "^0.6.0",
     "html-webpack-plugin": "^3.0.6",
     "jasmine": "^3.1.0",
     "jasmine-core": "^2.99.0",
